src/scss/partials/_chatBubble.scss
/* ... */
// * fix scroll with only 1 bubble
.bubbles-date-group:last-of-type {
  .bubble:last-of-type {
    margin-bottom: $bubble-margin;
    /* &:after, .document-container:last-of-type .document-selection {
      bottom: 0 !important;
    } */
  }
}

.bubble-content-wrapper {
  transform: scale(1) translateX(0);
  transform-origin: center;
  opacity: 1;
  
  @include animation-level(2) {
    transition: transform var(--transition-standard-out), opacity var(--transition-standard-out);
  }

  .bubbles-inner.zoom-fading & {
    transition: transform var(--transition-standard-in), opacity var(--transition-standard-in);
    //transition: transform 10s ease-in-out, opacity 10s ease-in-out;
  }

  &.zoom-fade /* .bubble-content */ {
    transform: scale3d(.8, .8, 1) translateX(0);
    //transform: scale(.8) translateX(0);
    opacity: 0;
  }

  @include respond-to(not-handhelds) {
    max-width: 85%;
  }

  @include respond-to(handhelds) {
    max-width: calc(100% - var(--message-handhelds-margin));
  }

  > .user-avatar {
    position: absolute;
    margin-left: -45px;
    //left: -3rem; # DO JS3
    bottom: 0;
    cursor: pointer;

    .bubbles.is-selecting & {
      transform: scale3d(1, 1, 1);
      transform-origin: bottom;
      transition: transform var(--transition-standard-out);

      body.animation-level-0 & {
        transition: none;
      }
    }

    .bubbles.is-selecting:not(.backwards) & {
      transform: scale3d(.76, .76, 1);
      transition: transform var(--transition-standard-in);
    }

    // @include respond-to(handhelds) {
    //   left: -45px;
    // }
  }
}

.bubble.service {
  align-self: center;
  justify-content: center;

  .bubble-content {
    background-color: transparent;
    border-radius: .875rem;
  }
  
  .service-msg {
    color: #fff;
    //background-color: rgba(0, 0, 0, .24);
    background-color: var(--message-highlightning-color);
    font-size: .9375rem;
    padding: .28125rem .625rem;
    line-height: var(--line-height);
    border-radius: inherit;
    user-select: none;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;

    i {
      font-style: normal;
    }

    a {
      color: #fff;
    }

    a, .peer-title {
      &:hover {
        text-decoration: underline;
      }
    }

    .peer-title {
      cursor: pointer;
      //margin-right: 5px;
    }

    img.emoji {
      margin-bottom: 3px;
    }
  }
}

.bubble.is-in {
  .bubble-content {
    &, .poll-footer-button {
      border-radius: 6px 12px 12px 6px;
    }
  }
    
  &.is-group-first {
    .bubble-content, .poll-footer-button {
      border-top-left-radius: 12px;
    }
  }

  &.is-group-last {
    &.can-have-tail {
      .bubble-content, .poll-footer-button {
        border-bottom-left-radius: 0;
      }

      .bubble-tail {
        margin-left: -8.4px;
      }
  
      /* .bubble-content:after {
        margin-left: -8.4px;
        background-image: url('assets/img/msg-tail-left.svg');
      } */
    }

    &:not(.can-have-tail) {
      .bubble-content, .poll-footer-button {
        border-bottom-left-radius: 12px;
      }
    }
  }

  &.forwarded .attachment,
  &.is-reply .attachment,
  &:not(.hide-name).is-message-empty .attachment/* ,
  &:not(.hide-name):not(.sticker) .attachment */ {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
  }

  .quote {
    @include hover() {
      background-color: var(--light-primary-color);
    }
  }

  &.is-reply {
    &.emoji-big, &.sticker {
      .reply {
        left: calc(100% + 10px);
        background-color: var(--message-background-color);

        @include respond-to(handhelds) {
          left: calc(100% + 1px);
        }
      }
    }
  }
  
  .quote {
    border-left: 2px var(--primary-color) solid;
  }

  .quote .name, .reply-title/* , .reply i */ {
    color: var(--primary-color);
  }
  
  .time {
    margin-left: -3px;
    padding-right: 8px;

    .inner {
      color: var(--secondary-text-color);
      margin-bottom: 4px;
    }
  }

  &.is-message-empty.is-group-last {
    /* &:not(.with-media-tail):not(.with-replies) {
      &.photo, &.video {
        .bubble-content {
          border-bottom-left-radius: 6px;
        }
      }
    } */

    &.with-media-tail {
      .attachment {
        border-bottom-left-radius: 0;
      }

      .bubble__media-container {
        margin-left: -9px;
      }
    }
  }

  .audio-subtitle, .contact-number, .audio-time {
    color: var(--secondary-text-color) !important;
  }

  /* .poll {
    &-answer-selected {
      &:before {
        margin-left: -1px;
      }
    }
  } */
}
/* ... */

